feat: added UI library

--- a/apps/nx-next/package.json
+++ b/apps/nx-next/package.json
@@ -5,9 +5,18 @@
   "nx": {
     "name": "nx-next"
   },
+  "scripts": {
+    "dev": "next dev",
+    "dev:turbo": "next dev --turbopack",
+    "build": "next build",
+    "start": "next start",
+    "start:prod": "next build && next start",
+    "lint": "next lint"
+  },
   "dependencies": {
-    "next": "~15.1.4",
+    "next": "~15.2.3",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "@nx-test/ui": "0.0.1"
   }
 }
